# cline

jupyterlab-extension/: .eslintrc.js  .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  README.md  demo.sh  install.json  jest.config.js  package.json  pyproject.toml  tsconfig.json
jupyterlab-extension/cline_jupyterlab/: __init__.py
jupyterlab-extension/examples/: integration-examples.ts
jupyterlab-extension/schema/: plugin.json
jupyterlab-extension/src/: cline-adapter.ts  core.ts  host-integration.ts  index.ts  widget.tsx
jupyterlab-extension/src/__tests__/: cline-integration.test.ts
jupyterlab-extension/src/components/: ClineInterface.tsx  index.ts
jupyterlab-extension/style/: index.css
